--- a/apps/event/Dockerfile.dev
+++ b/apps/event/Dockerfile.dev
@@ -1,15 +1,17 @@
-# Dockerfile.dev
+# Node 18 
 FROM node:18
 
-# 앱 디렉토리 설정
+# 작업 디렉토리 
 WORKDIR /app
 
-# 종속성 먼저 설치
+# package.json과 lock 파일 복사
 COPY package*.json ./
-RUN npm install
 
-# 코드 복사
+# 의존성 설치
+RUN npm install -g @nestjs/cli && npm install
+
+# 소스 코드 복사
 COPY . .
 
-# 개발 모드 실행
+# NestJS 개발 서버 실행
 CMD ["npm", "run", "start:dev"]
