--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,11 +27,16 @@ services:
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093 
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
       - kafka_data:/bitnami/kafka
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
     
   gateway:
     build:
@@ -58,7 +63,10 @@ services:
       - ./apps/auth:/app
       - /app/node_modules
     depends_on:
-      - mongodb
+      kafka:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
 
   event:
     build:
@@ -71,8 +79,10 @@ services:
       - ./apps/event:/app
       - /app/node_modules
     depends_on:
-      - mongodb
-      - kafka
+      kafka:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
 
 volumes:
   mongo_data: {}
