--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -30,6 +30,7 @@
     "@nestjs/microservices": "^11.1.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/ioredis": "^4.28.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
