--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -1,5 +1,5 @@
 TZ=Asia/Seoul
-MONGO_URI=mongodb://root:1234@mongodb:27017/auth?authSource=admin
+MONGO_URI=mongodb://root:1234@mongodb:27017/nexon?authSource=admin
 REDIS_HOST=redis
 REDIS_PORT=6379
 KAFKA_BROKER=kafka:9092
